feat: migrate to Jakarta mail. (#137)